--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -80,5 +80,5 @@
 </div>
 
 <div class="fixed-action-btn">
-  <a class="btn-floating btn-large red darken-4 tooltipped" data-position="left" data-tooltip="Publica con nosotros" routerLink=""><i class="large material-icons">add</i></a>
+  <a class="btn-floating btn-large red darken-4 tooltipped" data-position="left" data-tooltip="Publica con nosotros" (click)="irPublicar()"><i class="large material-icons">add</i></a>
 </div>
