--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -13,11 +13,6 @@
 }
 
 /* classes */
-.fixed-action-btn
-{
-    margin: 1rem;
-}
-
 .parallax-container
 {
     background-color: rgba(0, 0, 0, 0.3);
@@ -50,4 +45,14 @@
 /* icon prefix focus color */
 .input-field .prefix.active {
     color: rgb(180, 0, 0);
+}
+
+.tooltip
+{
+    background-color: rgba(42,42,42,0.8);
+    border-radius: 5px;
+    margin-right: 10px;
+    color: whitesmoke;
+    font-size: 14pt;
+    padding: 5px 15px;
 }
