--- a/src/app/components/publicar-evento/publicar-evento.component.html
+++ b/src/app/components/publicar-evento/publicar-evento.component.html
@@ -1,3 +1,196 @@
-<p>
-  publicar-evento works!
-</p>
+<!-- LLENADO DE INFORMACIÓN DE LA PUBLICACIÓN -->
+<div class="row my20vh">
+  <div class="row">
+    <div class="col s2 offset-s1">
+      <img class="responsive-img" src="./../../../assets/imagenes/evento.png">
+      <h5 class="center-align">Publica tu evento</h5>
+    </div>
+
+    <!-- PASO 1 INFO GENERAL DE LA PUBLICACIÓN -->
+    <form class="col s8 offset-s1" *ngIf="paso === 1">
+
+      <h5>Información general sobre tu publicación</h5>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="nombre" type="text" class="validate" name="nombre" [(ngModel)]="evento.nombre">
+          <label for="nombre">Nombre Evento*</label>
+        </div>
+      </div>
+      
+      <div class="row" *ngIf="usuario_lugares">
+        <div class="input-field col s12">
+          <h5>¿Este evento se realizará en uno de tus lugares publicados?</h5>
+          <select multiple (change)="asignarLugar('lugar-usuario')" id="lugar-usuario">
+            <option value="" disabled selected>Lugar</option>
+            <option *ngFor="let lugar of usuario_lugares" value="{{ lugar.id }}">{{ lugar.nombre }}</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="direccion" type="text" class="validate" name="direccion" [(ngModel)]="evento.direccion">
+          <label for="direccion" id="label-direccion">Dirección {{ tipo_lugar | titlecase }}*</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <select multiple (change)="asignarTipo('select-tipo')" id="select-tipo">
+            <option value="" disabled selected>Tipo Evento*</option>
+            <option *ngFor="let subtipo of tipos_evento" value="{{ subtipo }}">{{ subtipo }}</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="descripcion" class="materialize-textarea" [(ngModel)]="evento.descripcion" name="descripcion"></textarea>
+          <label for="descripcion">Descripción*</label>
+        </div>
+      </div>
+
+    </form>
+
+    <!-- PASO 2 INFO REDES SOCIALES DE LA PUBLICACIÓN -->
+    <form class="col s8 offset-m1" *ngIf="paso === 2">
+      <h5>Cuéntanos un poco más acerca de <b>{{ evento.nombre | uppercase }}</b></h5>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="web" type="text" class="validate" name="web" [(ngModel)]="evento.web">
+          <label for="web">Página Web</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="fb" type="text" class="validate" name="fb" [(ngModel)]="evento.facebook">
+          <label for="fb">Facebook</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="ig" type="text" class="validate" name="ig" [(ngModel)]="evento.instagram">
+          <label for="ig">Instagram</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="twt" type="text" class="validate" name="twt" [(ngModel)]="evento.twitter">
+          <label for="twt">Twitter</label>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="telefono" type="text" class="validate" name="telefono" [(ngModel)]="evento.telefono">
+          <label for="telefono">Teléfono</label>
+        </div>
+      </div>
+
+    </form>
+
+    <!-- PASO 3 INFO DETALLE (HORARIOS, IMÁGENES, VIDEOS, PRECIOS, SERVICIOS) DE LA PUBLICACIÓN -->
+    <form class="col s8 offset-m1" *ngIf="paso === 3">
+
+      <div class="row">
+        <h5>¿Qué horario se realizará <b>{{ evento.nombre | uppercase }}</b>?</h5>
+        <p>¡Note que los horarios están en formato de 24 horas!</p>
+        <div class="input-field col s6">
+          <input id="horario" type="text" class="timepicker" (change)="horario()">
+          <label for="hora">Hora</label>
+        </div>
+      </div>
+
+      <div class="row" *ngIf="tipo_lugar !== 'discoteca'">
+        <h5>¿Qué precio tendrá la boleteria para asistir a <b>{{ evento.nombre | uppercase }}</b>?</h5>
+        <div class="input-field col s12">
+          <input id="boleteria" type="text" class="validate" name="boleteria" [(ngModel)]="evento.boleteria">
+          <label for="boleteria">Precio boletería</label>
+        </div>
+      </div>
+
+      <div class="row" *ngIf="tipo_lugar !== 'discoteca'">
+        <h5>¿Alguna aclaración que desees hacer sobre <b>{{ evento.nombre | uppercase }}</b>?</h5>
+        <div class="input-field col s12">
+          <input id="notas" type="text" class="validate" name="notas" [(ngModel)]="evento.notas">
+          <label for="notas">Notas adicionales</label>
+        </div>
+      </div>
+
+    </form>
+
+    <!-- PASO 4 IMÁGENES Y VIDEOS DE LA PUBLICACIÓN -->
+    <form class="col s8 offset-m1" *ngIf="paso === 4">
+
+      <h5>Muéstranos un poco más de {{ evento.nombre | uppercase }}</h5>
+      <div class="row file-field input-field">
+        <div class="col s12">
+          <h5>¿Desea agregar fotos de {{ evento.nombre | uppercase }}?</h5>
+          <p> Si no agrega fotos, se pondrá una foto por defecto.</p>
+          <div class="btn">
+            <span>Subir Foto</span>
+            <input type="file">
+          </div>
+          <div class="file-path-wrapper">
+            <input class="file-path validate" type="text">
+          </div>
+        </div>
+      </div>
+
+      <div class="row input-field">
+        <div class="col s12">
+          <h5>¿Desea agregar videos de {{ evento.nombre | uppercase }}?</h5>
+          <div class="file-field">
+            <div class="btn">
+              <span>Subir Video</span>
+              <input type="file">
+            </div>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text">
+            </div>
+          </div>
+          <div>
+            <p>O agrega la url del video!</p>
+            <div class="row">
+              <div class="input-field  col s10">
+                <input id="url" type="text" class="validate" [(ngModel)]="url_video" name="url">
+                <label for="url">Url del video</label>
+              </div>
+              <div class="col s2">
+                <button class="btn" (click)="agregarUrlVideo()">Agregar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </form>
+
+  </div>
+  <div class="row my10px">
+    <div class="col s8 offset-s4">
+      <button class="btn right" *ngIf="paso === 4" type="submit" (click)="publicar()">Publicar
+        <i class="material-icons right">publish</i>
+      </button>
+
+      <button class="btn right" type="submit" *ngIf="paso < 4" (click)="siguientePaso()">Siguiente
+        <i class="material-icons right">send</i>
+      </button>
+
+      <button class="btn left red" *ngIf="paso > 1" type="submit" (click)="anteriorPaso()">Atrás
+        <i class="material-icons left">arrow_back</i>
+      </button>
+    </div>
+  </div>
+  <div class="row my10px">
+    <div class="col">
+      <button class="btn left red" (click)="confirmacionCancelar()">Cancelar publicación
+        <i class="material-icons left">cancel</i>
+      </button>
+    </div>
+  </div>
+</div>
