--- a/src/app/components/publicar-lugar/publicar-lugar.component.css
+++ b/src/app/components/publicar-lugar/publicar-lugar.component.css
@@ -4,6 +4,12 @@
     margin-bottom: 20vh;
 }
 
+.my10px
+{
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 .px10px
 {
     padding-left: 10px;
