--- a/src/app/components/publicar-lugar/publicar-lugar.component.html
+++ b/src/app/components/publicar-lugar/publicar-lugar.component.html
@@ -125,27 +125,27 @@
       <div class="row">
         <div class="input-field col s12">
           <input id="fb" type="text" class="validate" name="fb" [(ngModel)]="publicacion.facebook">
-          <label for="fb">Facebook</label>
+          <label for="fb">Facebook - Nombre de usuario</label>
         </div>
       </div>
 
       <div class="row">
         <div class="input-field col s12">
           <input id="ig" type="text" class="validate" name="ig" [(ngModel)]="publicacion.instagram">
-          <label for="ig">Instagram</label>
+          <label for="ig">Instagram - Nombre de usuario</label>
         </div>
       </div>
 
       <div class="row">
         <div class="input-field col s12">
           <input id="twt" type="text" class="validate" name="twt" [(ngModel)]="publicacion.twitter">
-          <label for="twt">Twitter</label>
+          <label for="twt">Twitter - Nombre de usuario</label>
         </div>
       </div>
 
       <div class="row">
         <div class="input-field col s12">
-          <input id="telefono" type="text" class="validate" name="telefono" [(ngModel)]="publicacion.telefono">
+          <input id="telefono" type="number" class="validate" name="telefono" [(ngModel)]="publicacion.telefono">
           <label for="telefono">Teléfono</label>
         </div>
       </div>
