--- a/src/app/components/publicar/publicar.component.html
+++ b/src/app/components/publicar/publicar.component.html
@@ -39,4 +39,5 @@
 	
 	<app-publicar-lugar *ngIf="tipo_publicacion === 'lugar'"></app-publicar-lugar>
 	<app-publicar-evento *ngIf="tipo_publicacion === 'evento'"></app-publicar-evento>
+	<app-publicar-turismo *ngIf="tipo_publicacion === 'turismo'"></app-publicar-turismo>
 </div>
