--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -56,19 +56,23 @@
         <div class="col s12">
           <ul class="tabs">
             <li class="tab col s6"><a class="active" href="#imagenes">Imágenes</a></li>
-            <li class="tab col s6"><a href="#videos">Videos</a></li>
+            <li class="tab col s6" *ngIf="carrusel_vid"><a href="#videos">Videos</a></li>
           </ul>
         </div>
-        <div id="imagenes" class="col s12">
-          <!-- <div class="carousel carousel-slider">
-            <a class="carousel-item" href="#one!"><img src="{{ publicacion.imagenes[0] }}"></a>
-            <a class="carousel-item" href="#two!"><img src="{{ publicacion.imagenes[1] }}"></a>
-          </div> -->
-          <div class="carousel carousel-slider center">
-            <a href="" class="carousel-item"><img src="{{ publicacion.imagenes[0] }}" alt=""></a>
+        <div id="imagenes" class="col s12" *ngIf="carrusel_img">
+          <div class="carousel carousel-slider center" id="carousel">
+            <a class="carousel-item" *ngFor="let imagen of publicacion.imagenes"><img src="{{ imagen }}" alt=""></a>
           </div>
         </div>
-        <div id="videos" class="col s12">Videos</div>
+        <div id="imagenes" class="col s12" *ngIf="!carrusel_img">
+          <img class="responsive-img" src="./../../../assets/imagenes/{{ publicacion.categoria }}.png" alt="">
+        </div>
+        <div id="videos" class="col s12" *ngIf="carrusel_vid">
+          <!-- <div class="carousel carousel-slider center" id="carousel">
+            <a class="carousel-item" *ngFor="let video of publicacion.videos"><iframe src="{{ video }}" frameborder="0"></iframe>
+            </a>
+          </div> -->
+        </div>
       </div>
     </div>
   </div>
